[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "qi-memory"
version = "1.0.0"
description = "A Pyhon library for memory management for the agent ai"
authors = [
    { name="Giuseppe Zileni", email="giuseppe.zileni@gmail.com" }
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license-files = ["LICENSE.md"]
keywords = ["logi", "logging", "algho", "quest-it", "qi_log_loki"]
classifiers = ['Programming Language :: Python :: 3', 'Operating System :: OS Independent']
dependencies = []

[tool.setuptools]
packages = ["py_axirv"]  
