[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "py-arxiv"
version = "1.0.1"
description = "A Pyhon library for memory management for the agent ai"
authors = [
    { name="Giuseppe Zileni", email="giuseppe.zileni@gmail.com" }
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license-files = ["LICENSE.md"]
keywords = ["logi", "logging", "algho", "quest-it", "qi_log_loki"]
classifiers = ['Programming Language :: Python :: 3', 'Operating System :: OS Independent']
dependencies = [
    "aioboto3>=14.3.0",
    "aiobotocore>=2.22.0",
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.13",
    "aioitertools>=0.12.0",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "attrs>=25.3.0",
    "boto3>=1.37.3",
    "botocore>=1.37.3",
    "build>=1.2.2.post1",
    "certifi>=2025.6.15",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.2",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "fonttools>=4.58.4",
    "fpdf>=1.7.2",
    "frozenlist>=1.7.0",
    "greenlet>=3.2.3",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "jmespath>=1.0.1",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "kiwisolver>=1.4.8",
    "langchain>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-text-splitters>=0.3.8",
    "langsmith>=0.4.1",
    "matplotlib>=3.10.3",
    "multidict>=6.5.0",
    "narwhals>=1.44.0",
    "numpy>=2.3.1",
    "orjson>=3.10.18",
    "packaging>=24.2",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pluggy>=1.6.0",
    "propcache>=0.3.2",
    "pyaws-s3>=1.0.22",
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
    "Pygments>=2.19.2",
    "pyparsing>=3.2.3",
    "pyproject_hooks>=1.2.0",
    "pytest>=8.4.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "PyYAML>=6.0.2",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "s3transfer>=0.11.3",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "SQLAlchemy>=2.0.41",
    "tenacity>=9.1.2",
    "typing-inspection>=0.4.1",
    "typing_extensions>=4.14.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "wrapt>=1.17.2",
    "yarl>=1.20.1",
    "zstandard>=0.23.0"
]

[tool.setuptools]
packages = ["py_arxiv"]  
